--- a/config.json
+++ b/config.json
@@ -1,3 +1,6 @@
 {
-  "interval": 300
+  "base_url": "https://github.com/luci",
+  "enabled_paths": ["client"],
+  "enabled_refglobs": ["refs/*"],
+  "path_map_exceptions": {"client": "client-py"}
 }
