--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "https://github.com/luci",
+  "base_url": "https://chromium.googlesource.com/infra/luci",
   "enabled_paths": ["client"],
   "enabled_refglobs": ["refs/heads/master", "refs/heads/stable"],
   "path_map_exceptions": {"client": "client-py"}
