Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = infra
+[access "refs/gsubtreed-config/main"]
+	forgeAuthor = group mdb/chrome-git-admins
+	forgeCommitter = group mdb/chrome-git-admins
+	push = +force group mdb/chrome-git-admins
